# uv260308_geo-research

./: .coverage  pyproject.toml
data/: stracture.tsv
data/heads_tails/: top5_bottom5_市町村_平年平均気温(℃).tsv  top5_bottom5_市町村_平年日最低気温(℃).tsv  top5_bottom5_市町村_平年日最高気温(℃).tsv  top5_bottom5_市町村_平年日照時間(時間).tsv  top5_bottom5_市町村_平年降水量(mm).tsv  top5_bottom5_都道府県_平年平均気温(℃).tsv  top5_bottom5_都道府県_平年日最低気温(℃).tsv  top5_bottom5_都道府県_平年日最高気温(℃).tsv  top5_bottom5_都道府県_平年日照時間(時間).tsv  top5_bottom5_都道府県_平年降水量(mm).tsv
data/metrics/: 平年平均気温(℃).tsv  平年日最低気温(℃).tsv  平年日最高気温(℃).tsv  平年日照時間(時間).tsv  平年降水量(mm).tsv  歴代最低気温(℃).tsv
doc/: 20260308_1805_implementation_plan.md  20260308_1806_task.md  20260308_1808_walkthrough.md  20260308_181332_implementation_plan.md  20260308_181332_task.md  20260308_181332_thought.md  20260308_183126_implementation_plan.md  20260308_183126_task.md  20260308_183126_walkthrough.md  20260308_191900_Schema.tsv  20260308_playwright_mcp_setup.md
src/: app.py  config.py  data_generator.py  data_loader.py  processor.py  scraper.py  test_ui.py  tmp_investigate.py
tests/: test_processer.py
