[project]
name = "uv260308-geo-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "polars",
    "requests",
    "beautifulsoup4>=4.14.3",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
